--- a/_sources/_config.yml
+++ b/_sources/_config.yml
@@ -43,9 +43,11 @@ author: Lucian, medaey
 copyright: "Unpublished Work (cleft) 2017-{currentYear} {author}"
 
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Bienvenue sur notre site web dédié aux professionnels de l'information !
+  Plongez dans notre base de connaissances riche en procédures et tutoriels
+  informatiques rédigés en markdown, le tout en toute confidentialité.
+  Explorez des ressources qui enrichiront et amélioreront votre expertise dans le domaine.
+  Rejoignez-nous dans cette quête d'excellence professionnelle.
 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://www.admindoc.fr/" # the base hostname & protocol for your site, e.g. https://example.com
@@ -73,7 +75,7 @@ header_transparent: true
 sitemap: true
 
 # If you want to change site language, you can set lang option
-# lang: "en"  # default lang is en
+lang: "fr"  # default lang is en
 
 # Translate languges
 # langs refer to https://cloud.google.com/translate/docs/languages
@@ -108,7 +110,7 @@ coolblack: #090a0b
 spacegrey: #353535
 snowwhite: #ffffff
 #
-theme_color: spacegrey
+theme_color: snowwhite
 #
 # Custom color as below:
 # theme_color: "#882250"
@@ -119,7 +121,7 @@ orangered: #ff5100
 greatgold: #f2cb05
 greenblue: #389092
 
-brand_color: greenblue
+brand_color: orangered
 #
 # Custom color as below:
 # brand_color: "#1a8e42"
