--- a/_source/_config.yml
+++ b/_source/_config.yml
@@ -112,9 +112,9 @@ aux_links_new_tab: false
 nav_sort: case_sensitive # Capital letters sorted before lowercase
 
 # External navigation links
-nav_external_links:
-  - title: GitHub
-    url: https://github.com/AdminDoc/admindoc.github.io
+#nav_external_links:
+#  - title: GitHub
+#    url: https://github.com/AdminDoc/admindoc.github.io
 
 # Footer content
 # appears at the bottom of every page's main content
